trunk/timeware/src/objects/Points__c.object
<CustomObject>
    <description>Master-Detail relationship with Benefit (Master) object. Items detail the number of points created based on range of hours absent or tardy.</description>
    <fields>
        <fullName>Benefit__c</fullName>
        <label>Benefit</label>
        <referenceTo>Pay_Code__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Hours__c</fullName>
        <label>End Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hours__c</fullName>
        <label>Start Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Points</label>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Points ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>